--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,65 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en">
+<head>
+	<title>Zakhidov Beck's Webpage</title>
 	<meta charset="utf-8">
-	<meta name="personal" content="Peronal Website initial-scale=1.0">
-		<title>Zakhidov Beck's Webpage</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" type="image/x-icon" href="img/favicon.png">
-    </head>
-    <body>
-	<div class="header">
+</head>
 
-	</div>
-	<div class="navbar">
-		<a href="https://www.linkedin.com/in/zakhidov-beck/">LinkedIn</a>
-		<a href="https://t.me/admbeck">Telegram</a>
-		<a href="mailto:admbeck@outlook.com">E-Mail</a>
-		<a href="https://gitlab.com/AdmBeck">Gitlab</a>
-		<a href="file/cv.pdf">CV</a>
-	</div>
-	<div class="header">
-		<div class="leftheader">
-		<h1 >Zakhidov Nodirbek's<br> &ensp;&ensp;&ensp;&ensp; Personal Webpage</h1>
-		</div>
-		<div class="rightheader">
-		<h2>Systems<br>Administrator</h3>
-		</div>
-	</div>
-	<div class="mainblock">
-		<p><img src="img/avatar.jpg">
-					CV and work info, bla bla bla
+<body>
+	<header>
+		<h1 >Zakhidov Nodirbek's Personal Webpage</h1>
+	</header>
+
+	<nav>
+		<ul>
+			<a href="/index.html">
+				<li>
+					Home
+				</li>
+			</a>
+			<a href="https://www.linkedin.com/in/zakhidov-beck/">
+				<li>
+					LinkedIn
+				</li>
+			</a>
+			<a href="https://t.me/admbeck">
+				<li>
+					Telegram
+				</li>
+			</a>
+			<a href="mailto:admbeck@outlook.com">
+				<li>
+					E-Mail
+				</li>
+			</a>
+			<a href="https://gitlab.com/AdmBeck">
+				<li>
+					Gitlab
+				</li>
+			</a>
+			<a href="file/cv.pdf">
+				<li>
+					CV
+				</li>
+			</a>
+		</ul>
+	</nav>
+	<main>
+		<img class=resright src="img/avatar.jpg" alt="Beck" title="Beck">
+		<p>
+			CV and work info, bla bla bla
 		</p>
-	</div>
-	<div class="quote"> 
+	</main>
+	<footer>
 		<p> 
-		<i>“Nature is pleased with simplicity. And nature is no dummy”</i>
+		<i>“Nature is pleased with simplicity. And nature is no dummy.”</i>
 		</p>
 		<p class="quotename">
 		- Isaac Newton
 		</p>
-	</div>
-    </body>
+	</footer>
+</body>
 </html>
