css & html edits, changed favicon

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image/x-icon" href="img/favicon.png">
+	<link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
 					Gitlab
 				</li>
 			</a>
-			<a href="file/cv.pdf">
+			<a href="/file/cv.pdf">
 				<li>
 					CV
 				</li>
@@ -49,8 +49,10 @@
 	</nav>
 	<main>
 		<img class=resright src="img/avatar.jpg" alt="Beck" title="Beck">
+
+		<h2>About</h2>
 		<p>
-			CV and work info, bla bla bla
+			
 		</p>
 	</main>
 	<footer>
