--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,9 @@
 
 		<h2>About</h2>
 		<p>
-			
+			I am a systems administrator.<br><br>
+			Officially, my job is to administer Linux servers and Windows workstations.<br>
+			Which is a fancy way of saying that I keep lights blinking green, bosses happy and accounting busy.
 		</p>
 	</main>
 	<footer>
