--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
 		<h2>About</h2>
 		<p>
 			I am a systems administrator.<br><br>
-			Officially, my job is to administer Linux servers and Windows workstations.<br>
-			Which is a fancy way of saying that I keep lights blinking green, bosses happy and accounting busy.
+			Officially, my job is to administer Linux servers and Windows workstations.<br><br>
+			Which is a fancy way of saying that I keep lights blinking green, rocks talking to each other, accounting busy and bosses happy. 
 		</p>
 	</main>
 	<footer>
