--- a/public/index.html
+++ b/public/index.html
@@ -17,32 +17,34 @@
 		<ul>
 			<a href="/index.html">
 				<li>
-					Home
+					🏠Home
 				</li>
 			</a>
 			<a href="https://www.linkedin.com/in/zakhidov-beck/">
 				<li>
-					LinkedIn
+					<img src="img/linkedin.svg" alt="LinkedIn logo">LinkedIn
 				</li>
 			</a>
 			<a href="https://t.me/admbeck">
 				<li>
+					<img src="img/telegram.svg" alt="Telegram logo">
 					Telegram
 				</li>
 			</a>
 			<a href="mailto:admbeck@outlook.com">
 				<li>
-					E-Mail
+					📧E-Mail
 				</li>
 			</a>
 			<a href="https://gitlab.com/AdmBeck">
 				<li>
+					<img src="img/gitlab.svg" alt="GitLab logo">
 					Gitlab
 				</li>
 			</a>
 			<a href="/file/cv.pdf">
 				<li>
-					CV
+					📇CV
 				</li>
 			</a>
 		</ul>
