--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,9 @@
 	<main>
 		<img class=resright src="img/avatar.jpg" alt="Beck" title="Beck">
 
-		<h2>About</h2>
+		<h2>🐧 About me</h2>
 		<p>
-			I am a systems administrator.<br><br>
+			I am a systems administrator. <br><br>
 			Officially, my job is to administer Linux servers and Windows workstations.<br><br>
 			Which is a fancy way of saying that I keep lights blinking green, rocks talking to each other, accounting busy and bosses happy. 
 		</p>
