integrated blog and tag cloud from luke smith's website

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
 				🏠Home
 				</li>
 			</a>
-			<a href="https://www.linkedin.com/in/zakhidov-beck/">
+			<a href="blog.html">
 				<li>
-				<img src="img/linkedin.svg" alt="LinkedIn logo">LinkedIn
+				📜Blog
 				</li>
 			</a>
 			<a href="https://t.me/admbeck">
@@ -40,23 +40,68 @@
 				<img src="img/gitlab.svg" alt="GitLab logo">Gitlab
 				</li>
 			</a>
+			<a href="https://www.linkedin.com/in/zakhidov-beck/">
+				<li>
+				<img src="img/linkedin.svg" alt="LinkedIn logo">LinkedIn
+				</li>
+			</a>
 			<a href="/file/cv.pdf">
 				<li>
 				📇CV
 				</li>
 			</a>
+
 		</ul>
 	</nav>
 	<main>
 		<img class=resright src="img/avatar.jpg" alt="Beck" title="Beck">
 
-		<h2>🐧 About me</h2>
+		<h2>🐧About Me</h2>
 		<p>
 			I am a systems administrator. <br><br>
 			Officially, my job is to administer Linux servers and Windows workstations.<br><br>
 			Which is a fancy way of saying that I keep lights blinking green, rocks talking to each other, accounting busy and bosses happy. 
 		</p>
+
+		<h2 style=clear:both;>📜Writings</h2>
+	<div class=column>
+		<h3>Recent Articles</h3>
+	<ul style="padding:0"> 
+       	<!--BLOG-->
+	<li>14 Nov &ndash; <a href=""></a></li>
+	<li>03 Sep &ndash; <a href=""></a></li>
+	<li>28 Aug &ndash; <a href=""></a></li>
+	<li>13 Aug &ndash; <a href=""></a></li>
+	<li>29 Jul &ndash; <a href=""></a></li>
+	<li>23 Jul &ndash; <a href=""></a></li>
+        <li><strong><a href="blog.html">See all other blog posts...</a></strong></li>
+        </ul>
+        </div>
+
+        <div class=column>
+        	<h3>Topic Cloud</h3>
+        <ul id=tagcloud>
+	<!--TAGCLOUD-->
+	<a href=tag/economics.html><li>📈 Economics</li></a>
+	<a href=tag/lifestyle.html><li>👨‍👩‍👦 Lifestyle</li></a>
+	<a href=tag/linux.html><li>🐃 Linux</li></a>
+	<a href=tag/personal.html><li>😎 Personal</li></a>
+	<a href=tag/philosophy.html><li>🎓 Philosophy</li></a>
+	<a href=tag/politics.html><li>👑 Politics</li></a>
+	<a href=tag/religion.html><li>⛪ Religion</li></a>
+	<a href=tag/science.html><li>🥼 Science</li></a>
+	<a href=tag/software.html><li>🖥️ Software</li></a>
+	<a href=tag/technology.html><li>⚙️ Technology</li></a>
+	<a href=tag/tutorial.html><li>📖 Tutorial</li></a>
+	<a href=tag/updates.html><li>🆕 Updates</li></a>
+        </ul>
+        </div>
+
+	<p>
+	test
+	</p>
 	</main>
+
 	<footer>
 		<p> 
 		<i>“Nature is pleased with simplicity. And nature is no dummy.”</i>
