v1 of website complete

--- a/public/index.html
+++ b/public/index.html
@@ -10,64 +10,51 @@
 
 <body>
 	<header>
-		<h1 >Zakhidov Nodirbek's Personal Webpage</h1>
+		<h1 >Zakhidov Nodirbek's Webpage</h1>
 	</header>
 
 	<nav>
 		<ul>
-			<a href="/index.html">
+			<a href="index.html">
 				<li>
 				🏠Home
 				</li>
 			</a>
-			<a href="blog.html">
+<!--			<a href="blog.html">
 				<li>
 				📜Blog
 				</li>
 			</a>
-			<a href="https://t.me/admbeck">
-				<li>
-				<img src="img/telegram.svg" alt="Telegram logo">Telegram
-				</li>
-			</a>
-			<a href="mailto:admbeck@outlook.com">
-				<li>
-				📧E-Mail
-				</li>
-			</a>
+-->
 			<a href="https://gitlab.com/AdmBeck">
 				<li>
 				<img src="img/gitlab.svg" alt="GitLab logo">Gitlab
 				</li>
 			</a>
-			<a href="https://www.linkedin.com/in/zakhidov-beck/">
+			<a href=contacts.html>
 				<li>
-				<img src="img/linkedin.svg" alt="LinkedIn logo">LinkedIn
+				📧Contacts
 				</li>
 			</a>
-			<a href="/file/cv.pdf">
-				<li>
-				📇CV
-				</li>
-			</a>
-
 		</ul>
 	</nav>
 	<main>
 		<img class=resright src="img/avatar.jpg" alt="Beck" title="Beck">
 
-		<h2>🐧About Me</h2>
+		<h2>📌About Me</h2>
 		<p>
 			I am a systems administrator. <br><br>
 			Officially, my job is to administer Linux servers and Windows workstations.<br><br>
 			Which is a fancy way of saying that I keep lights blinking green, rocks talking to each other, accounting busy and bosses happy. 
 		</p>
+	<!-- 
+		WIP don't mind this section
 
 		<h2 style=clear:both;>📜Writings</h2>
 	<div class=column>
 		<h3>Recent Articles</h3>
 	<ul style="padding:0"> 
-       	<!--BLOG-->
+       	BLOG
 	<li>14 Nov &ndash; <a href=""></a></li>
 	<li>03 Sep &ndash; <a href=""></a></li>
 	<li>28 Aug &ndash; <a href=""></a></li>
@@ -81,7 +68,8 @@
         <div class=column>
         	<h3>Topic Cloud</h3>
         <ul id=tagcloud>
-	<!--TAGCLOUD-->
+
+	TAGCLOUD
 	<a href=tag/economics.html><li>📈 Economics</li></a>
 	<a href=tag/lifestyle.html><li>👨‍👩‍👦 Lifestyle</li></a>
 	<a href=tag/linux.html><li>🐃 Linux</li></a>
@@ -96,10 +84,9 @@
 	<a href=tag/updates.html><li>🆕 Updates</li></a>
         </ul>
         </div>
+	-->
+		<h2 style=clear:both;></h2>
 
-	<p>
-	test
-	</p>
 	</main>
 
 	<footer>
