--- a/public/contacts.html
+++ b/public/contacts.html
@@ -53,14 +53,14 @@
 
 		<div style="margin:auto">
 			<ul id=tagcloud>
-			<a href="file/cv.pdf"><li>📇CV</li></a>
+			<a href="file/cv2.pdf"><li>📇CV</li></a>
 			<a href="https://www.linkedin.com/in/zakhidov-beck/"><li><img src="img/linkedin.svg" alt="LinkedIn logo">LinkedIn</li></a>
 			<a href="references.html"><li>🎓References</li></a>
 			<ul>
 		</div>
 	</main>
 	<footer>
-		<p> 
+		<p>
 		<i>“Nature is pleased with simplicity. And nature is no dummy.”</i>
 		</p>
 		<p class="quotename">
