added ccna cert

--- a/public/references.html
+++ b/public/references.html
@@ -44,6 +44,16 @@
 
 			<h2>🐧Linux</h2>
 
+			<h3>2021</h3>
+		<ul>
+			<a href="file/2021-linux-3.pdf">
+				<li>Micros - "Linux Network Administration"</li>
+			</a>
+			<a href="file/2021-linux-2.pdf">
+				<li>Micros - "Linux System Administration"</li>
+			</a>
+
+		</ul>
 			<h3>2020</h3>
 		<ul>
 			<a href="file/2020-linux-1.pdf">
@@ -51,21 +61,22 @@
 			</a>
 		</ul>
 
-			<h3>2021</h3>
-		<ul>
-			<a href="file/2021-linux-2.pdf">
-				<li>Micros - "Linux System Administration"</li>
-			</a>
-			<a href="file/2021-linux-3.pdf">
-				<li>Micros - "Linux Network Administration"</li>
-			</a>
-		</ul>
 		</div>
 
 		<div class=column>
 
 			<h2>🪟Windows</h2>
 
+			<h3>2021</h3>
+		<ul>
+			<a href="file/2021-windows-3.pdf">
+				<li>Networking with Windows Server 2016 (20741)</li>
+			</a>
+
+			<a href="file/2021-windows-2.pdf">
+				<li>Installation, Storage, and Compute with Windows Server 2016 (20740)</li>
+			</a>
+		</ul>
 			<h3>2020</h3>
 		<ul>
 			<a href="file/2020-windows-1.pdf">
@@ -73,30 +84,28 @@
 			</a>
 		</ul>
 
-			<h3>2021</h3>
-		<ul>
-			<a href="file/2021-windows-2.pdf">
-				<li>Installation, Storage, and Compute with Windows Server 2016 (20740)</li>
-			</a>
-			<a href="file/2021-windows-3.pdf">
-				<li>Networking with Windows Server 2016 (20741)</li>
-			</a>
-		</ul>
 		</div>
 		<div class=column style="width: 100%">
 			<h2>🌐Networks</h2>
+
+			<h3>2022</h3>
+		<ul>
+			<a href="file/2021-01-11_CCNA200-301.pdf">
+				<li>CCNA 200-301</li>
+			</a>
+		</ul>
+
 			<h3>2021</h3>
 		<ul>
-			<a href="file/CCNAv7-1.pdf">
-				<li>CCNAv7: Introduction to Networks</li>
+			<a href="file/CCNAv7-3.pdf">
+				<li>CCNAv7: Enterprise Networking, Security, and Automation</li>
 			</a>
 			<a href="file/CCNAv7-2.pdf">
 				<li>CCNAv7: Switching, Routing, and Wireless Essentials</li>
 			</a>
-			<a href="file/CCNAv7-3.pdf">
-				<li>CCNAv7: Enterprise Networking, Security, and Automation</li>
+			<a href="file/CCNAv7-1.pdf">
+				<li>CCNAv7: Introduction to Networks</li>
 			</a>
-
 		</ul>
 		</div>
 		<h2>🎓Academia</h2>
@@ -107,7 +116,7 @@
 
 	</main>
 	<footer>
-		<p> 
+		<p>
 		<i>“Nature is pleased with simplicity. And nature is no dummy.”</i>
 		</p>
 		<p class="quotename">
