moved references to navbar

--- a/public/contacts.html
+++ b/public/contacts.html
@@ -31,6 +31,11 @@
 				<img src="img/gitlab.svg" alt="GitLab logo">Gitlab
 				</li>
 			</a>
+			<a href="references.html">
+				<li>
+				🎓References
+				</li>
+			</a>
 			<a href=contacts.html>
 				<li>
 				📧Contacts
@@ -49,13 +54,12 @@
 			</ul>
 		</div>
 
-		<h2>💼 Work Related</h2>
+		<h2>💼 Work</h2>
 
 		<div style="margin:auto">
 			<ul id=tagcloud>
 			<a href="file/cv2.pdf"><li>📇CV</li></a>
 			<a href="https://www.linkedin.com/in/zakhidov-beck/"><li><img src="img/linkedin.svg" alt="LinkedIn logo">LinkedIn</li></a>
-			<a href="references.html"><li>🎓References</li></a>
 			<ul>
 		</div>
 	</main>
