--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,11 @@
 				<img src="img/gitlab.svg" alt="GitLab logo">Gitlab
 				</li>
 			</a>
+			<a href="references.html">
+				<li>
+				🎓References
+				</li>
+			</a>
 			<a href=contacts.html>
 				<li>
 				📧Contacts
