added credly link

--- a/public/references.html
+++ b/public/references.html
@@ -41,12 +41,16 @@
 				📧Contacts
 				</li>
 			</a>
+			<a href="https://www.credly.com/users/beck-zakhidov">
+				<li>
+				🏅Credly
+				</li>
+			</a>
 		</ul>
 	</nav>
 
 	<main>
 		<div class=column>
-
 			<h2>🐧Linux</h2>
 
 			<h3>2021</h3>
