removed different cvs, updated to newest one

--- a/public/contacts.html
+++ b/public/contacts.html
@@ -58,7 +58,7 @@
 
 		<div style="margin:auto">
 			<ul id=tagcloud>
-			<a href="file/cv2.pdf"><li>📇CV</li></a>
+			<a href="file/cv.pdf"><li>📇CV</li></a>
 			<a href="https://www.linkedin.com/in/zakhidov-beck/"><li><img src="img/linkedin.svg" alt="LinkedIn logo">LinkedIn</li></a>
 			<ul>
 		</div>
