--- a/public/references.html
+++ b/public/references.html
@@ -26,7 +26,7 @@
 				</li>
 			</a>
 -->
-			<a href="https://gitlab.com/AdmBeck">
+			<a href="https://gitlab.com/admbeck">
 				<li>
 				<img src="img/gitlab.svg" alt="GitLab logo">Gitlab
 				</li>
