feat: updating website itself

--- a/public/contacts/index.html
+++ b/public/contacts/index.html
@@ -53,7 +53,7 @@
 
 <h2>💼 Work</h2>
 <ul id ="tagcloud">
-    <a href="/ref/cv.pdf"><li>📇CV</li></a>
+    <a href="/cv.pdf"><li>📇CV</li></a>
     <a href="https://www.linkedin.com/in/zakhidov-beck/"><li><img src="/img/linkedin.svg" alt="LinkedIn logo">LinkedIn</li></a>
 </ul>
 </div>
